Changes between 2.1.x and 2.2.0-git:
--------------------------------

Changes between 2.0.x and 2.1.0:
--------------------------------

Important changes:
 * The licenses of numerous modules have changed from GPLv2+ to LGPLv2.1+
 * Discontinued support for PowerPC-based and 32bit Intel-based Macs
   VLC requires Mac OS X 10.6 or later now on 64bit hardware
 * The --with-tuning and --without-tuning options are removed. To tune
   compilation for a specific processor type, set CFLAGS manually.

3rd party libraries (contrib):
 * /extras/contrib has been replaced by a cleaner system in /contrib

Core:
 * Audio core rewrite
 * Fix support for .001, .00x split files on Windows
 * Full support for UNICODE Windows mode
 * Partial support for Windows Store App
 * Removed SQL support
 * Add an audio fingerprinter
 * Disabled and marked obsolete --language selection

Decoders:
 * Support for OPUS via libopus.
 * Support for CDXL, Ut Video, VBLE, Dxtory codecs via libavcodec.
 * Numerous improvements on the OpenMAX IL codec
 * Support for Ulead DV audio
 * Support for TechSmith Screen Codec 2, Microsoft Expression Encoder Screen,
   Microsoft Application Screen Decoder 1 (MSS1) and 2 (MSS2)
 * Support for Indeo Audio Coder, RealAudio Lossless
 * Add Hardware Acceleration support on OS X for H.264 based upon VDADecoder
 * Add Hardware Acceleration support on Android Jelly Bean using MediaCodec
 * Support for SCTE-27 subtitles
 * Support for VDPAU hardware video decoding acceleration on Linux
 * Split G.711 decoder from Araw decoder

Encoders:
 * high10, high422 and high444 encoding support in h264
 * QuickSyncVideo Encoding (Intel Media SDK) support using Intel GPU on Windows

Access:
 * Screen: add support for OS X Lion and later,
           remove support for previous OS X releases
 * Major improvements in DASH support
 * Improvements in Blu-Ray module, notably for multiple video tracks support
 * Important improvements and rewrite of the v4l2 access module