@@ -1140,7 +1140,6 @@ modules/video_output/egl.c
 modules/video_output/fb.c
 modules/video_output/gl.c
 modules/video_output/glx.c
-modules/video_output/ios.m
 modules/video_output/ios2.m
 modules/video_output/kva.c
 modules/video_output/macosx.m
